assets/css/profile.css
.profile-header {
    background-color: #090e53;
    color: #fff;
    padding: 15px 20px;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 999;
    display: flex;
    justify-content: space-between;
}

.student-info {
    display: flex;
    align-items: center;
    gap: 10px;
    margin-right: 40px;
}

.student-name {
    color: white;
    font-size: 18px;
    margin-right: 7px;
}

.logo {
    max-width: 100px;
    margin-left: 20px;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropbtn {
    background-color: transparent;
    color: white;
    border: none;
    cursor: pointer;
    padding: 0;
    display: flex;
    align-items: center;
    gap: 5px;
    font-size: 18px;
}

.demo-image {
    width: 40px;
    height: 40px;
    border-radius: 50%;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #090e53;
    min-width: 160px;
    right: 0;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    color: white;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {
    background-color: #0e1581;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.body-content {
    margin-top: 70px;
}

.sidebar {
    background-color: white;
    color: #2c3e50;
    width: 210px;
    height: 310px;
    position: fixed;
    top: 100px;
    left: 20px;
    bottom: 0;
    padding-top: 20px;
    overflow-y: auto;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
}

.sidebar-toggle {
    display: none;
}

.sidebar ul {
    list-style-type: none;
    padding: 0;
}

.sidebar li {
    padding: 10px 20px;
}

.sidebar a {
    text-decoration: none;
    color: #2c3e50;
    display: block;
}

.sidebar a:hover {
    background-color: #f0f0f0;
}

.sidebar a.active{
    background-color: #f0f0f0;
  } 
  
  .sidebar-dropdown{
    height: 330px;
    width: 210px;
  }

.dropdown {
    display: none;
}

.dropdown.active {
    display: block;
}

.notification-box {
    background-color: #fff;
    position: fixed;
    top: 100px;
    left: 320px;
    padding: 20px;
    margin: 20px auto;
    max-width: 800px;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
}

.notification-heading {
    font-size: 24px;
    font-weight: bold;
    margin: 0;
    color: #333;
    margin-bottom: 20px;
}

.timetable {
    width: 100%;
    border-collapse: collapse;
}

.timetable th,
.timetable td {
    padding: 10px;
    text-align: left;
    border-bottom: 1px solid #ccc;
}

.timetable th {
    font-size: 18px;
    font-weight: bold;
    color: #333;
    background-color: #f0f0f0;
}

.timetable td {
    font-size: 16px;
    color: #555;
}

.notification-title {
    font-size: 18px;
    font-weight: bold;
    color: #333;
    width: 30%;
}

.notification-notice {
    font-size: 16px;
    color: #555;
    width: 70%;
}

.student-details-box {
    background-color: #fff;
    position: fixed;
    top: 130px;
    left: 320px;
    padding: 20px;
    margin: 20px auto;
    width: 1100px;
    border: 1px solid #ccc;
    border-radius: 5px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
    
}

.navbar-box {
    position: relative;
    background-color: #090e53;
    color: #fff;
    width: 130px;
    top: -18px;
    left: -20px;
    padding: 10px 15px;
    border-radius: 5px 5px 0 0;
    margin-top: -40px;
    border: 1px solid #ccc;
}

.navbar-heading {
    font-size: 13px;
    font-weight: bold;
    margin: 0;
}


.student-details-heading {
    font-size: 24px;
    font-weight: bold;
    margin: 0;
    color: white;
    background-color: #090e53;
    padding: 10px 20px;
    border-radius: 5px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.table-buttons {
    display: flex;
    gap: 10px;
}

.refresh-button,
.excel-button,
.pdf-button {
    background-color: #090e53;
    color: white;
    border: none;
    padding: 5px 10px;
    cursor: pointer;
    border-radius: 5px;
}

.refresh-button:hover,
.excel-button:hover,
.pdf-button:hover {
    background-color: #0e1581;
}


.student-details-table {
    width: 100%;
    border-collapse: collapse;
    border-spacing: 10px;
}

.student-details-table tr {
    border-bottom: 1px solid #ccc;
}

.student-details-table td {
    padding: 10px;
    font-weight: bold;
    text-align: left;
}

.student-details-table td:last-child {
    font-weight: normal;
}


/* Responsive Styles */
@media (max-width: 768px) {
    .student-info {
        margin-right: 0;
        justify-content: flex-end;
    }

    .sidebar {
        height: 240px;
    }

    .sidebar-toggle {
        display: block;
        position: fixed;
        top: 30px;
        left: 20px;
        font-size: 24px;
        color: #fff;
        cursor: pointer;
        z-index: 1000;
    }

    .sidebar {
    display: none;
    }

    .sidebar-active {
        display: block;
    }

    .notification-box {
        top: 100px;
        left: 20px;
        padding: 20px;
        margin: 20px auto;
        max-width: 90%;
    }

    .notification-box-toggle{
        top: 350px;
    }

    .student-details-box {
        top: 130px;
        left: 20px;
        max-width: 90%;
    }

    .student-details-box-toggle {
        top: 370px;
    }

    .student-details-heading {
        font-size: 14px;
    }

    .table-buttons {
        gap: 7px;
    }
}

